--- a/calc.css
+++ b/calc.css
@@ -14,7 +14,9 @@ h1 {
 }
 #headintro {
     display: flex;
-    justify-content: center;
+    j uwheuifnra90 y i ydwf,  jhd
+     ioierioeru
+    y-content: center;
 }
 /* #first{
     color: rgb(103, 62, 62);
